--- a/zfs-0.6.3/etc/zfs/Makefile
+++ b/zfs-0.6.3/etc/zfs/Makefile
@@ -167,15 +167,15 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(pkgsysconfdir)"
 DATA = $(pkgsysconf_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/missing --run aclocal-1.11
 ALIEN = alien
 ALIEN_VERSION = 8.90
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 0
 AR = ar
-AUTOCONF = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/missing --run automake-1.11
 AWK = gawk
 CC = gcc
 CCAS = gcc
@@ -237,7 +237,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -297,10 +297,10 @@ ZFS_META_RELEASE = 1
 ZFS_META_VERSION = 0.6.3
 ZFS_MODULE_LOAD = modules-load.d
 ZLIB = -lz
-abs_builddir = /home/ubuntu/zfs/zfs-0.6.3/etc/zfs
-abs_srcdir = /home/ubuntu/zfs/zfs-0.6.3/etc/zfs
-abs_top_builddir = /home/ubuntu/zfs/zfs-0.6.3
-abs_top_srcdir = /home/ubuntu/zfs/zfs-0.6.3
+abs_builddir = /home/ubuntu/zfs/ZFS/zfs-0.6.3/etc/zfs
+abs_srcdir = /home/ubuntu/zfs/ZFS/zfs-0.6.3/etc/zfs
+abs_top_builddir = /home/ubuntu/zfs/ZFS/zfs-0.6.3
+abs_top_srcdir = /home/ubuntu/zfs/ZFS/zfs-0.6.3
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -330,7 +330,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/ubuntu/zfs/zfs-0.6.3/config/install-sh
+install_sh = ${SHELL} /home/ubuntu/zfs/ZFS/zfs-0.6.3/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
